<resources>
    <string name="app_name">Auth</string>

    <string name="hello_world">Hello world!</string>
    <string name="error_msg_required">Required</string>
    <string name="error_msg_password_mismatch">Password Mismatch</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_to_do_list">ToDoListActivity</string>
    <string name="lbl_friend_requests">Friend Requests</string>
    <string name="lbl_sent_requests">Sent Requests</string>
    <string name="lbl_accept">Accept</string>
    <string name="reject">Reject</string>
    <integer-array name="avatars">
        <item>@drawable/avatarm1</item>
        <item>@drawable/avatarm2</item>
        <item>@drawable/avatarm3</item>
        <item>@drawable/avatarm4</item>
        <item>@drawable/avatarf1</item>
        <item>@drawable/avatarf2</item>
        <item>@drawable/avatarf3</item>
        <item>@drawable/avatarf4</item>
        <item>@drawable/add_profile_pic</item>
    </integer-array>

    <string-array name="user_actions">
        <item>Send Message</item>
        <item>Send Friend Request</item>
    </string-array>

    <string-array name="friends_child_names">
        <item>Request</item>
        <item>Friends</item>
        <item>Sent Request</item>
    </string-array>

    //ERROR MESSAGE
    <string name="error_no_data_found">No Data Fouund</string>
    <string name="lbl_all_user">All Users</string>
    <string name="lbl_friends">Friends</string>
    <string name="lbl_messages">Messages</string>


    //Drawer Option
    <string name="lbl_profile">Profile</string>
    <string name="lbl_likes">Likes</string>
    <string name="lbl_rate_us">Rate Us</string>
    <string name="lbl_signout">Sign Out</string>

    //Drawer Option Array
    <array name="array_drawer_options">
        <item>@string/lbl_profile</item>
        <item>@string/lbl_likes</item>
        <item>@string/lbl_rate_us</item>
        <item>@string/lbl_signout</item>
    </array>

    //Group
    <string name="lbl_open">Open</string>
    <string name="lbl_active">Active</string>
    <string name="lbl_closed">Closed</string>
    <string name="lbl_done">Done</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_password_protected">Password Protected</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_max_members">Max Members</string>
    <string name="lbl_group_name">Group Name</string>
    <string name="lbl_status">Group Status</string>
    <string name="lbl_members" formatted="false">Members : %d / %d</string>
    <string name="lbl_show_all">SHOW ALL</string>
    <string-array name="group_status_array">
        <item>@string/lbl_open</item>
        <item>@string/lbl_active</item>
        <item>@string/lbl_closed</item>
    </string-array>
    <string-array name="member_count">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
</resources>
