<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/background_blue_border"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputlayout_group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/green"
            android:layout_toStartOf="@+id/imageview_group_image">

            <EditText
                android:id="@+id/edittext_group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/lbl_group_name"
                android:textColor="@color/primary"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/textinputlayout_group_name"
            android:layout_toStartOf="@+id/imageview_group_image"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="4"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical"
                android:text="@string/lbl_max_members" />

            <Spinner
                android:id="@+id/spinner_max_members"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="6"
                android:entries="@array/member_count" />

        </LinearLayout>


        <ImageView
            android:id="@+id/imageview_group_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            android:background="@drawable/background_blue_border"
            android:contentDescription="@null"
            android:padding="5dp"
            android:src="@drawable/avatarf4" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_weight="4"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical"
            android:text="@string/lbl_password_protected" />

        <Switch
            android:id="@+id/switch_password"
            android:layout_width="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout

        android:id="@+id/textinputlayout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/lbl_password"
            android:inputType="textPassword"
            android:textSize="16sp"
            tools:text="Hello" />
    </android.support.design.widget.TextInputLayout>
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_margin="5dp"
        android:text="@string/lbl_status"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />
    <RadioGroup
        android:id="@+id/radiogroup_group_status"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_weight="1"
            android:checked="true"
            android:id="@+id/radiobutton_open"
            android:text="@string/lbl_open"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <RadioButton
            android:layout_weight="1"
            android:id="@+id/radiobutton_active"
            android:text="@string/lbl_active"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <RadioButton
            android:layout_weight="1"
            android:id="@+id/radiobutton_closed"
            android:text="@string/lbl_closed"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </RadioGroup>
</LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/background_blue_border"
            android:text="@string/lbl_cancel"
            android:textColor="@color/primary" />

        <Button
            android:id="@+id/button_done"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/background_blue_border"
            android:text="@string/lbl_done"
            android:textColor="@color/primary" />
    </LinearLayout>


</LinearLayout>